--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@axiomhq/js": "^0.1.3",
     "@prisma/client": "5.1.0",
     "autoprefixer": "^10.4.14",
     "bitcore-lib": "^10.0.5",
