--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,34 +9,25 @@ env:
   NODE_ENV: production
 
 jobs:
-  build_and_push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: 'yarn'
 
-      - name: Build Docker image
-        run: docker build -t snekpay:latest .
+    - run: yarn --frozen-lockfile
+    - run: yarn build
+    - run: yarn --prod --frozen-lockfile
 
-      - name: Save Docker image as tar
-        run: docker save -o image.tar snekpay:latest
-
-      - name: Copy Docker image to VPS
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-          source: snekpay.tar
-          target: /tmp/snekpay.tar
-
-      - name: SSH into VPS and load Docker image
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-          script: |
-            docker load -i /tmp/snekpay.tar
-            rm /tmp/image.tar
+    - uses: actions/upload-artifact@v3
+      with:
+        name: 'node-build'
+        path: |
+          ./package.json
+          ./node_modules
+          ./build
+          ./static
