--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
         node-version: 18
         cache: 'yarn'
 
-    - run: yarn --frozen-lockfile
+    - run: yarn --dev --frozen-lockfile
     - run: yarn build
     - run: yarn --prod --frozen-lockfile
 
