--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,9 +22,6 @@ jobs:
     - run: NODE_ENV=development yarn --frozen-lockfile
     - run: yarn build
     - run: yarn --prod --frozen-lockfile
+    - run: ls -la
     - run: docker build -t snekpay:latest .
     - run: docker save -o image.tar snekpay:latest
-    - uses: actions/upload-artifact@v3
-      with:
-        name: container.tar
-        path: image.tar
