--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,5 +22,5 @@ jobs:
     - run: NODE_ENV=development yarn --frozen-lockfile
     - run: yarn build
     - run: yarn --prod --frozen-lockfile
-    - run: docker build -t snekpay:latest .
+    - run: docker build -t snekpay:$(git rev-parse --short "$GITHUB_SHA") .
     - run: docker save -o image.tar snekpay:latest
