--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,7 @@ env:
 
 jobs:
   build:
+    timeout-minutes: 3
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +20,17 @@ jobs:
         node-version: 18
         cache: 'yarn'
 
-    - run: NODE_ENV=development yarn --frozen-lockfile
-    - run: yarn build
-    - run: yarn --prod --frozen-lockfile
-    - run: docker build -t snekpay:$(git rev-parse --short "$GITHUB_SHA") .
-    - run: docker save -o image.tar snekpay:$(git rev-parse --short "$GITHUB_SHA")
-    - uses: actions/upload-artifact@v3
+    - name: Build node app
+      run: |
+        NODE_ENV=development yarn --frozen-lockfile
+        yarn build
+        yarn --prod --frozen-lockfile
+    - name: Build docker
+      run: docker build -t snekpay:$(git rev-parse --short "$GITHUB_SHA") .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
       with:
-        name: container.tar
-        path: image.tar
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Push to Docker Hub
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay::$(git rev-parse --short "$GITHUB_SHA")
