--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,4 +33,4 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay/snekpay:$(git rev-parse --short "$GITHUB_SHA")
