--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,11 +26,11 @@ jobs:
         yarn build
         yarn --prod --frozen-lockfile
     - name: Build docker
-      run: docker build -t snekpay:$(git rev-parse --short "$GITHUB_SHA") .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA") .
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
