--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,7 @@ env:
   NODE_ENV: production
 
 jobs:
-  build:
+  build-and-push:
     timeout-minutes: 3
     runs-on: ubuntu-latest
 
@@ -34,3 +34,20 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push to Docker Hub
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+
+  deploy:
+    timeout-minutes: 3
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH into VPS and update Docker image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          script: |
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+            docker stop snekpay
+            docker rm snekpay
+            docker run -d --name snekpay --env-file ~/snekpay/.env --network bond ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
