--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,9 @@ jobs:
     timeout-minutes: 3
     runs-on: ubuntu-latest
 
+    env:
+      TAG: $(git rev-parse --short "$GITHUB_SHA")
+
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -26,20 +29,24 @@ jobs:
         yarn build
         yarn --prod --frozen-lockfile
     - name: Build docker
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA") .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:${{ env.TAG }}" .
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:${{ env.TAG }}"
 
   deploy:
     needs:
       - build-and-push
     timeout-minutes: 3
     runs-on: ubuntu-latest
+
+    env:
+      TAG: $(git rev-parse --short "$GITHUB_SHA")
+
     steps:
       - name: SSH into VPS and update Docker image
         uses: appleboy/ssh-action@master
@@ -49,7 +56,7 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:${{ env.TAG }}"
             docker stop snekpay
             docker rm snekpay
-            docker run -d --name snekpay --env-file ~/snekpay/.env --network bond ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:$(git rev-parse --short "$GITHUB_SHA")
+            docker run -d --name snekpay --env-file ~/snekpay/.env --network bond ${{ secrets.DOCKERHUB_USERNAME }}/snekpay:${{ env.TAG }}"
