--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,10 +13,9 @@ jobs:
     timeout-minutes: 3
     runs-on: ubuntu-latest
 
-    env:
-      TAG: $(git rev-parse --short "$GITHUB_SHA")
-
     steps:
+    - name: Set release tag
+      run: echo "TAG=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
@@ -44,10 +43,9 @@ jobs:
     timeout-minutes: 3
     runs-on: ubuntu-latest
 
-    env:
-      TAG: $(git rev-parse --short "$GITHUB_SHA")
-
     steps:
+      - name: Set release tag
+        run: echo "TAG=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
       - name: SSH into VPS and update Docker image
         uses: appleboy/ssh-action@master
         with:
